--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                 Northeast
             </div>
             <div class="option">
-                Northeast
+                Assam 
             </div>
             <div class="option">
-                Northeast
+                Madhya Pradesh 
             </div>
             <div class="option">
-                Northeast
+                Rajasthan 
             </div>
             <div class="option">
                 Northeast
