--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </header>
     <div class="notice head-box">
-        <marquee><span style="background-color:white;"><img src="new.gif.png" alt="" style="background-color:white; height:45%;"/></span>  Manipur candidates application submission is opened from <font>28-06-2023</font>  to <font>08-07-2023</font></marquee>
+        <marquee><span style="background-color:white;"><img src="new.gif.png" alt="" style="background-color:white; height:10px;"/></span>  Manipur candidates application submission is opened from <font>28-06-2023</font>  to <font>08-07-2023</font></marquee>
     </div>
     <div class="notice head-box" id="notice-2">
     </div>
