--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 <p>Notification</p>
             </div>
             <div class="menu">
-                <p>Stage:2 Apply Online</p>
+                <p>Stage:1 Registration</p>
             </div>
             <div class="menu">
-                <p>Para graph 1</p>
+                <p>Stage:2 Apply Online </p>
             </div>
             <div class="menu">
-                <p>Para graph 1</p>
+                <p>Fee Payment</p>
             </div>
             <div class="menu">
-                <p>Para graph 1</p>
+                <p>Candidate Grievances</p>
             </div>
             
         </div>
