--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>INDIAN POST GDS </title>
         <meta http-equiv="X-UA-Compatible" content="IE=7,8,edge" />
+        <link rel="icon" type="image/png" href="logo1.png">
         <meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     </head>
